<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pokemondata">

    <TextView
        android:id="@+id/pokemonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pokemonimg"
        android:layout_marginStart="105dp"
        android:text="@string/pkname"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pokemonHp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pokemonId"
        android:layout_below="@+id/pokemonId"
        android:text="@string/hp"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pokemon_attack"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="63dp"
        android:text="@string/attack"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pokemon_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pokemon_attack"
        android:layout_below="@+id/pokemon_defense"
        android:text="@string/bodytype"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pokemon_attribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pokemon_attack"
        android:layout_below="@+id/pokemon_body"
        android:text="@string/attribute"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pokemon_firstmove"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/pokemon_attack"
        android:layout_marginBottom="110dp"
        android:text="@string/skill"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pokemon_secondmove"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pokemon_attack"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="-19dp"
        android:text="@string/Nirvana"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp" />

    <Button
        android:id="@+id/linkboutton"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/pokemon_attack"
        android:layout_marginEnd="19dp"
        android:background="@drawable/textback"
        android:text="相剋表："
        android:textColor="#00008b"
        android:textSize="20dp" />


    <ImageView
        android:id="@+id/pokemonimg"
        android:layout_width="193dp"
        android:layout_height="164dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/pokemon_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pokemon_attack"
        android:layout_below="@+id/pokemon_attack"
        android:text="@string/defense"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/layout_info_name"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pokemonimg"
        android:layout_alignTop="@+id/pokemonId"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/layout_info_hp"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/layout_info_name"
        android:layout_below="@+id/pokemonId"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/layout_info_attack"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/layout_info_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/layout_info_defense"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/layout_info_attack"
        android:layout_below="@+id/pokemon_attack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/layout_info_bodytype"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/layout_info_attack"
        android:layout_below="@+id/pokemon_defense"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/layout_info_attribute"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/layout_info_attack"
        android:layout_below="@+id/pokemon_body"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/layout_info_first"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/pokemon_firstmove"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/layout_info_second"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pokemon_firstmove"
        android:layout_marginTop="-110dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/layout_info_charge"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pokemon_secondmove"
        android:layout_alignParentEnd="true"
        android:textSize="16sp" />

</RelativeLayout>